# api/consent-openapi.yaml
@@ -983,13 +983,6 @@ paths:
             type: string
 
         - in: query
-          name: agreementId
-          description: "An object with id agreementId"
-          required: true
-          schema:
-            type: string
-
-        - in: query
           name: revisionId
           description: "An object with id revisionId"
           required: true
@@ -1712,6 +1705,50 @@ paths:
         - OAuth2: []
 
 
+  /status/startup/:
+
+    get:
+      tags:
+        - status
+      summary: "READ"
+      operationId: "statusStartup"
+      description: "READ"
+      parameters: []
+      x-specification-usecase: ""
+      x-specification-scenario: ""
+      x-specification-pii-or-sensitive: "False"
+      responses:
+        '200':
+          description: ""
+            
+        '400':
+          description: bad input parameter
+      security:
+        - OAuth2: []
+
+
+  /status/readiness/:
+
+    get:
+      tags:
+        - status
+      summary: "READ"
+      operationId: "statusReadiness"
+      description: "READ"
+      parameters: []
+      x-specification-usecase: ""
+      x-specification-scenario: ""
+      x-specification-pii-or-sensitive: "False"
+      responses:
+        '200':
+          description: ""
+            
+        '400':
+          description: bad input parameter
+      security:
+        - OAuth2: []
+
+
 
 components:
   schemas:
@@ -1740,6 +1777,12 @@ components:
           format: ""
           example: ""
           description: "External id type specifier. A string. For instance \"email\" or \"foundational id\". Can be used in later queries."
+
+        identity_provider_id:
+          type: string
+          format: ""
+          example: ""
+          description: "This could be an FK, but for now we do not have a mapping of identity providers. IDBB may have more requirements."
 
 
     Agreement:
@@ -1840,7 +1883,7 @@ components:
           type: string
           format: ""
           example: ""
-          description: "TBD: categories of sensitivity from som ISO"
+          description: "categories of sensitivity"
 
         category:
           type: string
@@ -1964,7 +2007,7 @@ components:
       description: "A *generic* revision model captures the serialized contents of any shema's single row. This is then subject to 1) cryptographic signature and 2) auditing.\n\nAside from \"successor\" column, a revision should be considered locked."
       required:
            - id
-           - schema
+           - schema_name
            - object_id
            - serialized_snapshot
            - timestamp
@@ -1976,7 +2019,7 @@ components:
           example: ""
           description: ""
 
-        schema:
+        schema_name:
           type: string
           format: ""
           example: ""
@@ -2367,6 +2410,7 @@ components:
       description: "TBD: Model for the possible events pertaining a change to an object subject to auditing. This model is not necessarily a database-backed model, but part of application code."
       required:
            - id
+           - event_name
       properties:
 
         id:
@@ -2380,6 +2424,58 @@ components:
           format: ""
           example: ""
           description: "What happened - create/update/delete"
+
+
+    StatusStartup:
+      type: object
+      description: "This model is not stored in a database. It describes the status of the Building Block while starting up. API should not be public. This call is blocking until the system is ready, a timeout occurs or an error is detected."
+      required:
+           - status
+      properties:
+
+        status:
+          type: string
+          format: ""
+          example: ""
+          description: "Possible values: OK, TIMEOUT, ERROR"
+
+        error_message:
+          type: string
+          format: ""
+          example: ""
+          description: "Description of failure"
+
+        waiting_for:
+          type: string
+          format: ""
+          example: ""
+          description: "When a timeout occurs, a list of pending operations may be shared"
+
+
+    StatusReadiness:
+      type: object
+      description: "This model is not stored in a database. It describes the status of the Building Block while running. Returns immediately. API should not be public."
+      required:
+           - status
+      properties:
+
+        status:
+          type: string
+          format: ""
+          example: ""
+          description: "Possible values: OK, WAITING, ERROR"
+
+        error_message:
+          type: string
+          format: ""
+          example: ""
+          description: "Description of failure"
+
+        waiting_for:
+          type: string
+          format: ""
+          example: ""
+          description: "When a timeout occurs, a list of pending operations may be shared"
 
 
 
